--- a/index.html
+++ b/index.html
@@ -10,21 +10,39 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#HTML"><span>HTML</span></a></li>
-                <li><a href="#CSS"><span>CSS</span></a></li>
-                <li><a href="JS"><span>JavaScript</span></a></li>
+                <li><a href="#HTML-INTRO">HTML INTRO</a></li>
+                <li><a href="#ELEMENTS">ELEMENTS</a></li>
+                <li><a href="#TAGS">TAGS</a></li>
+                <li><a href="#JS">ATTRIBUTES</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section id="HTML">
-
+        <section id="HTML-INTRO">
+            <h1>HTML</h1>
+            <H2>Intro to HTML</H2>
+            <p>HTML (Hyper Text Markup Language) is the skeleton of all web pages. It provides structure to the content on a website, including text, images, buttons, videos and more. CSS can then be added on top of HTML to add styling to the document.</p>
+            <img class="html-description" src="./assets/images/HTML TEXT.JPG" alt="HTML, HT stands for hypertext & ML stands for markup language">
+            <p>Markup refers to a way of annotating text that is distinguishable from the text itself.</p>
         </section>
-        <section id="CSS">
-
+        <section ID="ELEMENTS">
+            <h2>Elements</h2>
+            <p> HTML annotates & separates the content within a web page using HTML tags. HTML tags are the "markup" for HTML. They are annotations that provide information to the browser about the type of context they contain. <br><br>
+            The browser has default styling that uses the information we give it through HTML tags to design the webpage for increased readability. Of course, this design is not creative at all and doesn’t involve colors, but that’s when CSS comes in!! <br><br>
+            A HTML ELEMENT is a unit of content in a HTML document formed by HTML tags and the text or media it contains. An example of what a HTML element looks like can be found below:
+            </p>
+            <p>&lt;p&gt; Hello World! &lt;/p&gt;</p>
+            <h2>Structure</h2>
+            <p>HTML is organized as a collection referred to as family tree relationships. This uses the same analogy as the family trees we see in people relationships. When an element is contained inside another element, it is referred to as the child of that element. The child element is said to be nested inside the parent of that element. <br><br>
+            Since there can be multiple lines of NESTING, this analogy can be extended to grandchildren, great grandchildren and beyond. The relationship between elements and their ancestor and descendent elements is known as HIERACHY.
+            </p>
         </section>
-        <section id="JS">
-
+        <section id="TAGS">
+            <h2>Creating a HTML document</h2>
+            <p>The first step when creating a HTML file is to begin your document with a document type declaration: &lt;!DOCTYPE html&gt;. This should be the first line on your HTML file and will give an instruction to the browser that we are working with a HTML file. This will be on every HTML file. That specific tag refers to HTML5, as it is the current standard. <br><br>
+            You may be wondering why the browser needs this piece of information, as it already has the file extension ‘.html’. It is crucial that you add this line of code in as although there is a chance your HTML document may work without it, you can never be sure as to how your browser will interpret your code without this. 
+            </p>
+            <h2>Common Tags</h2>
         </section>
     </main>
     <footer>
